tests/optional/optional.exp
Error ---------------------------------------------------------- generic.js:1:22

number [1] is incompatible with `T` [2].


Error ---------------------------------------------------------- generic.js:4:15

number [1] is incompatible with `T` [2].


Error ------------------------------------------------------------- loop.js:5:33

Cannot assign `y` to `x` because undefined [1] is incompatible with `T` [2].


Error --------------------------------------------------------- nullable.js:17:5

Cannot perform arithmetic operation because null or undefined [1] is not a
number.


Error --------------------------------------------------------- nullable.js:17:5

Cannot perform arithmetic operation because undefined [1] is not a number.


Error --------------------------------------------------------- nullable.js:23:5

Cannot perform arithmetic operation because null or undefined [1] is not a
number.


Error --------------------------------------------------------- nullable.js:23:5

Cannot perform arithmetic operation because undefined [1] is not a number.


Error --------------------------------------------------------- nullable.js:29:5

Cannot perform arithmetic operation because null or undefined [1] is not a
number.


Error --------------------------------------------------------- nullable.js:29:5

Cannot perform arithmetic operation because undefined [1] is not a number.


Error --------------------------------------------------------- nullable.js:35:5

Cannot perform arithmetic operation because null or undefined [1] is not a
number.


Error --------------------------------------------------------- nullable.js:35:5

Cannot perform arithmetic operation because undefined [1] is not a number.


Error --------------------------------------------------------- optional.js:1:23

Cannot perform arithmetic operation because undefined [1] is not a number.


Error --------------------------------------------------------- optional.js:7:14

Missing type annotation for `x`.


Error --------------------------------------------------------- optional.js:7:27

Missing type annotation for rest parameter `y`.


Error --------------------------------------------------------- optional.js:7:43

Cannot call `foo` with `x` bound to `x` because string [1] is incompatible with
number [2].


Error --------------------------------------------------------- optional.js:7:54

Cannot return `y[0]` because:
 - number [1] is incompatible with string [2].
 - number [3] is incompatible with string [2].


Error -------------------------------------------------- optional_param2.js:7:31

Cannot assign `i.map(...)` to `j` because in type argument `V`, undefined [1] is
incompatible with number [2].


Error -------------------------------------------------- optional_param4.js:12:5

Cannot call `foo` with `true` bound to `x` because boolean [1] is incompatible
with number [2].


Error ------------------------------------------------- optional_param4.js:13:10

Cannot call `foo` because in the rest argument and then type argument `T`,
boolean [1] is incompatible with string [2].


Error -------------------------------------------------------- undefined.js:8:14

Cannot get `x.duck` because property `duck` is missing in undefined [1].


Error ------------------------------------------------------- undefined2.js:8:14

Cannot get `x.duck` because property `duck` is missing in undefined [1].



Found 22 errors
